# gbsm

./: CMakeLists.txt  README.md  gbsm_config_autogen.h.in  gbsm_defs_linux.cmake  gbsm_defs_pi.cmake
inc/: SPI_TMC.h  command_line.h  cyclic_message.h  drives.h  gpio.h  io.h  main.h  read_register.h  step_control.h  stepper_routines.h  tmc4361a_status.h
inc/tmc4361a_conf/: tmc4361a_current_conf.h  tmc4361a_enc_in_conf.h  tmc4361a_enc_in_data_conf.h  tmc4361a_enc_out_data_conf.h  tmc4361a_events_clear_conf.h  tmc4361a_freeze_conf.h  tmc4361a_general_conf.h  tmc4361a_input_filt_conf.h  tmc4361a_intr_conf.h  tmc4361a_ramp_mode_conf.h  tmc4361a_reference_conf.h  tmc4361a_scale_values_conf.h  tmc4361a_spi_status_selection_conf.h  tmc4361a_spiout_conf.h  tmc4361a_start_conf.h  tmc4361a_step_conf.h  tmc4361a_stp_length_add_conf.h
inc/tmc5160_conf/: tmc5160_chop_conf.h  tmc5160_cool_conf.h  tmc5160_general_conf.h  tmc5160_ihold_irun_conf.h
libs/TMC-API/TMC4361A/: TMC4361A_Constants.h  TMC4361A_Fields.h  TMC4361A_Register.c  TMC4361A_Register.h
libs/TMC-API/TMC5160/: TMC5160_Constants.h  TMC5160_Fields.h  TMC5160_Register.c  TMC5160_Register.h
libs/gbsm_config/: CMakeLists.txt
libs/gbsm_config/inc/: gbsm_config.h
libs/gbsm_config/src/: gbsm_config.c
src/: SPI_TMC.c  command_line.c  cyclic_message.c  drives.c  gpio.c  io.c  main.c  read_register.c  step_control.c  stepper_routines.c  tmc4361a_status.c
src/tmc4361a_conf/: tmc4361a_current_conf.c  tmc4361a_enc_in_conf.c  tmc4361a_enc_in_data_conf.c  tmc4361a_enc_out_data_conf.c  tmc4361a_event_clear_conf.c  tmc4361a_freeze_conf.c  tmc4361a_general_conf.c  tmc4361a_input_filt_conf.c  tmc4361a_intr_conf.c  tmc4361a_ramp_mode_conf.c  tmc4361a_reference_conf.c  tmc4361a_scale_values_conf.c  tmc4361a_spi_status_selection_conf.c  tmc4361a_spiout_conf.c  tmc4361a_start_conf.c  tmc4361a_step_conf.c  tmc4361a_stp_length_add_conf.c
src/tmc5160_conf/: tmc5160_chop_conf.c  tmc5160_cool_conf.c  tmc5160_general_conf.c  tmc5160_ihold_irun_conf.c
version/: version.h.in
